maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value keepOnSideWalll
  keepOnSideWalll()
  ^Escaper:13: error: not found: value keepOnSideWall
        	keepOnSideWall()
                ^