maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  north()
  keepOnSideWalll()
}
def north() {
  while (getY()!=0) {
    if (getDirection()==Direction.NORD) {
      if (estFaceMur==false)
      	avance()
    	else {
      	do { 
        	keepOnSideWall()
        	 
      	} while (getDirection()!=Direction.NORD)
   	 }
 	 }
    else {
      while (getDirection()!=Direction.NORD)
      	droite();
    }
   
  }
}



def keepHandOnSideWall() {

  

    if (estFaceMur==false) {
      gauche();

      if (estFaceMur==true) {
        droite();
        avance();
      }

      else        	
      avance()

    }

    else { 
      gauche();

      if (estFaceMur==true) {
        retourne();

        if (estFaceMur==true) 
        droite()

        else 
        avance()
      }

      else           
      avance()


    }

  
}
def keepHandOnSideWalll() {

  while (estSurBiscuit==false) {

    if (estFaceMur==false) {
      gauche();

      if (estFaceMur==true) {
        droite();
        avance();
      }

      else        	
      avance()

    }

    else { 
      gauche();

      if (estFaceMur==true) {
        retourne();

        if (estFaceMur==true) 
        droite()

        else 
        avance()
      }

      else           
      avance()


    }
  }
  
}